--- a/css/content_ps.css
+++ b/css/content_ps.css
@@ -1,44 +1,74 @@
 .head_nav {
 
-	background: #3c3c8b;/*фиолетовый*/
+	background: #4a4bba;
 }
 
 #nav li.selected {
-	background: #ffb52c;/*желтый */
+	/* background: #e96037; */
+	border-radius: 5px;
+	background-color: #4a4bba !important;
+	box-shadow: 0 4px 20px 0px #22244e, 0 7px 12px -5px #717294;
 }
 
 .title_wr {
 	/* background-image: url(../img/back_ps.png); */
-	background-color: #3665a4;
+	background-color: #2c425f;
 	box-shadow: inset 0 -4px 5px 1px rgba(0,0,0,0.5);
 }
 .head_title p {
 	font-family: MyriadPro-Cond;
 	color: #fff;
-	font-size: 41px;
+	font-size: 25px;
 	}
 .head_title p + p{
 	text-transform:none;
-	font-size: 99px;
+	font-size: 25px;
 }
 
 /* Левая колонка */
  .sidebar { 
+	background: #fff;
+	border-style: solid;
+	border-width: 1px;
+	color: #A1A1EC;
+	/* box-shadow: inset 0 0 5px 1px #bcbcc7; */
+    border-radius: 5px;
 	float: left; 
-	width: 220;
-	padding: 0 5px 30px; 
-	margin: 0px 10px 20px 5px;
+	width: 250;
+	padding: 0 40px 30px 10px; 
+	margin: 0px 10px 20px -100px;
 	overflow: hidden;
 }
    
 /* Правая колонка */
 .content_box {
+	background: #fff;
+	border-radius: 5px;
 	margin: 0px 5px 20px 26%; 
-	padding: 0 5px 30px; 
+	padding: 5px 20px 30px 60px; 
+	border: solid  1px #A1A1EC;
+	/* border-width: 1px;
+	color: #A1A1EC; */
 	font-family: MyriadPro-Light;
 	text-align:justify;
-	color: #6F6F6E;
+	color: #161739;
 	font-size : 17px;
+}
+.content_box_li {
+	background: #fff;
+	border-radius: 5px;
+	/* margin: 0px 5px 20px 26%;  */
+	padding: 5px 20px 30px 60px; 
+	border: solid  1px #A1A1EC;
+	/* border-width: 1px;
+	color: #A1A1EC; */
+	font-family: MyriadPro-Light;
+	text-align:justify;
+	color: #161739;
+	font-size : 17px;
+}
+.content_box_li h2 {
+	text-align:center;
 }
 
 .content_box b {	
@@ -65,7 +95,7 @@
 
 .footer_wr{
 /* border: 1px solid #000; */
-	box-shadow: inset 2px 15px 9px -7px rgba(0,0,0,0.48);
+	box-shadow: inset 2px 15px 9px -7px #22244e;
 
 
 }
